# cifuzz

./: .ccls  .gitignore  .golangci.yaml  CODEOWNERS  CONTRIBUTING.md  Makefile  README.md  go.mod  go.sum  install.sh  main.go
.github/: release_template.md
.github/workflows/: building.yml  linting.yml  pipeline_docs.yml  pipeline_e2e.yml  pipeline_e2e_installer.yml  pipeline_e2e_source.yml  pipeline_general.yml  pipeline_installer.yml  pipeline_main.yml  pipeline_min_requirements.yml  pipeline_pr.yml  pipeline_push.yml  pipeline_release.yml  resuable_linting.yml  reusable_building.yml  reusable_testing.yml  testing.yml  workflow_installer.yml
cmd/: create_test.go  init.go  init_test.go  root.go  root_test.go  run_test.go
cmd/cifuzz/: main.go
cmd/gen-docs/: main.go
cmd/installer/: installer.go  main.go
docs/: Configuration.md  Coverage-ide-integrations.md  Getting-Started.md  Glossary.md  Home.md  How-To-Write-A-Fuzz-Test.md  Introduction-and-basic-concepts.md  RELEASE.md
examples/: README.md
examples/bazel/: .bazelrc  .gitignore  README.md  WORKSPACE  cifuzz.yaml
examples/cmake/: .gitignore  CMakeLists.txt  README.md  cifuzz.yaml  my_fuzz_target.cpp
examples/cmake/src/: explore_me.cpp
examples/gradle/: .gitignore  README.md  build.gradle  cifuzz.yaml  settings.gradle
examples/make/: .gitignore  Makefile  README.md  api.cpp  api.h  cifuzz.yaml  main.cpp  my_fuzz_test_1.cpp  my_fuzz_test_2.cpp
examples/maven/: .gitignore  README.md  cifuzz.yaml  pom.xml
examples/other/: Makefile  cifuzz.yaml
githooks/: README.md  pre-push
integration/: cli_test.go  prepare-install-dir.sh
integration-tests/: cli_test.go
integration-tests/bazel/: bazel_test.go
integration-tests/cmake/: cmake_test.go
integration-tests/cmake/testdata/src/parser/: CMakeLists.txt  parser.cpp  parser.h  secrets.cpp
integration-tests/gradle/: gradle_test.go
integration-tests/make/: make_test.go
integration-tests/maven/: maven_test.go
integration-tests/other/: other_test.go
integration-tests/shared/: bundle.go  cifuzz_runner.go  helpers.go  mock_server.go  remote_run.go
integration/utils/: filepath.go  minijail.go  report.go  runner.go
internal/access_tokens/: access_tokens.go  access_tokens_test.go  access_tokens_unix.go  access_tokens_windows.go  filewriter_windows.go
internal/builder/: builder.go
internal/bundler/: bundler.go  bundler_test.go
internal/cmd/: build.go  build_test.go  create.go  create_test.go  init.go  init_test.go  root.go  root_test.go  run.go  run_test.go
internal/cmdutils/: bazel.go  chdir.go  paths.go  pflag.go  validate.go
internal/completion/: finding_completion.go  fuzz_test_completion.go
internal/config/: cifuzz.yaml.tmpl  config.go  config_test.go  project.go  project_test.go  types.go
internal/installer/: installer.go  installer_unix.go  installer_windows.go
internal/names/: names.go  names_test.go
internal/testutil/: example_project.go  integration_helper.go  testutil.go
pkg/artifact/: archive.go  archive_test.go  metadata.go
pkg/binary/: binary.go
pkg/cmdutil/: errors.go
pkg/cmdutils/: config_check.go  config_check_test.go  errors.go  errors_test.go  paths.go  pflag.go  tests.go
pkg/config/: project.go
pkg/coverage/: coverage.go  coverage_test.go  lcov.go  lcov_test.go
pkg/dependencies/: definitions.go  definitions_test.go  deps.go  deps_test.go  dialog.go  test_helper.go  version.go  version_test.go
pkg/desktop/: notification.go
pkg/dialog/: dialog.go  dialog_test.go  in.go  in_test.go  out.go  out_test.go
pkg/finding/: finding.go  finding_errors.go  finding_test.go
pkg/install/: installer.go  installer_unix.go  installer_windows.go
pkg/log/: log.go  log_test.go  ptermwriter.go
pkg/minijail/: BUILD.bazel  minijail.go  output_filter.go
pkg/minijail/pkg/: minijail.go
pkg/minijail/process_wrapper/: process_wrapper_test.go
pkg/minijail/process_wrapper/src/: BUILD.bazel  process_wrapper.c
pkg/mocks/: finder.go
pkg/report/: finding.go  finding_test.go  report.go
pkg/runfiles/: finder.go  runfiles.go
pkg/runner/: runnerutils.go
pkg/storage/: filesystem.go  utils.go  utils_test.go
pkg/stubs/: fuzz-test.cpp.tmpl  fuzzTest.java.tmpl  stubs.go  stubs_test.go
pkg/vcs/: git.go  git_test.go
pkg/workarounds/: afero.go  afero_test.go
share/: classpath.gradle  tasks.json
testdata/: Makefile
testdata/fuzz-targets/: trigger_asan.c  trigger_asan_with_file_accesses.c  trigger_slow_input.cpp  trigger_timeout.cpp
testdata/shared/: api.cpp
tmp/: fuzz_target.cpp
tools/builder/: builder.go
tools/cmake/: cmake_test.go
tools/cmake/testdata/src/parser/: CMakeLists.txt  c_fuzz_test.c  crash_always_fuzz_target.cpp  legacy_fuzz_test.cpp  parser.cpp  parser_fuzz_test.cpp
tools/cmake/testdata/src/parser/parser_fuzz_test_seed_corpus/: asan_crash
(+177 files in other folders)
