load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["minijail.go"],
    data = [
        "//pkg/minijail/process_wrapper/src:process_wrapper",
        "@llvm//:bin/llvm-symbolizer",
        "@minijail",
    ],
    importpath = "code-intelligence.com/cifuzz/pkg/minijail",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/runfiles:go_default_library",
        "//util/envutil:go_default_library",
        "//util/fileutil:go_default_library",
        "//util/glogutil:go_default_library",
        "//util/stringutil:go_default_library",
        "@com_github_golang_glog//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
